Set Object As Camera - Monkey Render bug? #41395

Closed
opened 2014-08-11 09:36:20 +02:00 by Terry Wallwork · 5 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender GIT REV 5c3c3ab on a Fedora 20 Linux 64Bit Box with an Intel 3000HD GFX

I noticed that if I set certain objects as a camera with
[3D View Editor Header > View > Cameras > Set Active Object As Camera]
and then switch into Edit Mode and move the object mesh downward so that the object origin
is outside of the mesh.

If I then render from the object camera, things can render strangely. This doesn't seem
to happen all the time, but it does with the Monkey.

I have attached a blend file demonstrating the issue, my system-info.txt file and a video
showing the issue.

system-info.txt

SetObjectAsCamera-MonkeyBug.blend

ObjectAsCamera-MonkeyBug.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT REV 5c3c3ab on a Fedora 20 Linux 64Bit Box with an Intel 3000HD GFX I noticed that if I set certain objects as a camera with [3D View Editor Header > View > Cameras > Set Active Object As Camera] and then switch into Edit Mode and move the object mesh downward so that the object origin is outside of the mesh. If I then render from the object camera, things can render strangely. This doesn't seem to happen all the time, but it does with the Monkey. I have attached a blend file demonstrating the issue, my system-info.txt file and a video showing the issue. [system-info.txt](https://archive.blender.org/developer/F102409/system-info.txt) [SetObjectAsCamera-MonkeyBug.blend](https://archive.blender.org/developer/F102410/SetObjectAsCamera-MonkeyBug.blend) [ObjectAsCamera-MonkeyBug.webm](https://archive.blender.org/developer/F102411/ObjectAsCamera-MonkeyBug.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

This issue was referenced by 5d1d23d5bd

This issue was referenced by 5d1d23d5bdb0e5937520f16063f8d16fb049850c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5d1d23d5bd.

Closed by commit 5d1d23d5bd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41395
No description provided.