Fix T41395: Set Object As Camera - Monkey Render bug?